Codes updated to support varying keep rates during training

--- a/scripts/yaml/train_yaml/default_params.yaml
+++ b/scripts/yaml/train_yaml/default_params.yaml
@@ -1,32 +1,33 @@
 {
- "mode": "train",
- "dataset_params": { "data_folder": "/storage/data/",
-                     "dataset_name": "ImageNet",
-                     "resolution": 224, },
- "save_params": { "output_dir": "/storage/models/",
-                  "saveckp_freq": 1 },
- "dataloader_params": { "trainloader":{ "batch_size": 128,
+  "mode": "train",
+  "dataset_params": { "data_folder": "/storage/data/",
+                      "dataset_name": "ImageNet",
+                      "resolution": 224, },
+  "save_params": { "output_dir": "/storage/models/",
+                   "saveckp_freq": 1 },
+  "dataloader_params": { "trainloader":{ "batch_size": 128,
+                                         "accum_iter": 1,
+                                         "num_workers": 10,
+                                         "pin_memory": True,
+                                         "drop_last": True},
+                         "valloader": { "batch_size": 128,
                                         "accum_iter": 1,
                                         "num_workers": 10,
                                         "pin_memory": True,
-                                        "drop_last": True},
-                        "valloader": { "batch_size": 128,
-                                       "accum_iter": 1,
-                                       "num_workers": 10,
-                                       "pin_memory": True,
-                                       "drop_last": False} },
- "model_params": { "backbone_option":  'vit_base_patch16_224_in21k'}, #'vit_base_patch16_224_in21k', 'swin_base_patch4_window7_224_in22k'
- "system_params": { "num_gpus": 2,
-                    "gpu_ids": "0,1",
-                    "random_seed": 0,},
- "training_params": { "train": { "num_epochs": 400,
-                                 "val_freq": 1,
-                                 "optimizer": { "name": 'sgd', 
-                                                "adamw": { "lr": 0.00001, "momentum": [ 0.9, 0.999 ] , "warmup_epochs": 2, "step_epoch": 400 },
-                                                "sgd": { "lr": 0.0003, "momentum": 0.9 , "warmup_epochs": 2, "step_epoch": 400 } },
-                                 "wd": 0.0001,
-                                 "clip_grad": 1,
-                                 "label_smoothing": 0.1,
-                                 "input_type": { "name": "SampledTokens", # "AllTokens" or "SampledTokens"
-                                                 "SampledTokens": { "keep_rate": 0.5 } },}, },
+                                        "drop_last": False} },
+  "model_params": { "backbone_option":  'vit_base_patch16_224_in21k'}, #'vit_base_patch16_224_in21k', 'swin_base_patch4_window7_224_in22k'
+  "system_params": { "num_gpus": 2,
+                     "gpu_ids": "0,1",
+                     "random_seed": 0,},
+  "training_params": { "train": { "num_epochs": 400,
+                                  "val_freq": 1,
+                                  "optimizer": { "name": 'sgd',
+                                                 "adamw": { "lr": 0.00001, "momentum": [ 0.9, 0.999 ] , "warmup_epochs": 2, "step_epoch": 400 },
+                                                 "sgd": { "lr": 0.0003, "momentum": 0.9 , "warmup_epochs": 2, "step_epoch": 400 } },
+                                  "wd": 0.0001,
+                                  "clip_grad": 1,
+                                  "label_smoothing": 0.1,
+                                  "input_type": { "name": "SampledTokens", # "AllTokens" or "SampledTokens"
+                                                  "SampledTokens": { "keep_rate": 0.5,
+                                                                     "random_keep_rate": True} },}, },
 }
